# ETH-violent-mnemonic-collision

./: .gitignore  CMakeLists.txt  async_batch.py  batch.py  eth.py  fast_eth_key.py  shard_migrate.py  命令.txt
progress/: progress_shard_0.txt  shard_migration_map.txt
rpc_test_results/: all_rpc_results.json  batch_1000_rpc_nodes.txt  batch_rpc_nodes.txt
src/: eth_key_generator.cpp
test/: batch_100_rpc_nodes.txt  batch_rpc_nodes.txt  test_rpc_batch.py  test_rpc_batch_100.py  test_rpc_batch_10000.py
